added localTime.js script to head

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CLOCK</title>
+    <script src="localTime.js" defer></script>
     <link rel="stylesheet" href="styles.css" type="text/css" />
 </head>
 <body>
